force-app/main/default/objects/Vaccine_and_Preventative__c/Vaccine_and_Preventative__c.object-meta.xml
<CustomObject>
    <label>Vaccine and Preventative</label>
    <nameField>
        <displayFormat>{00000}</displayFormat>
        <label>Vaccine and Preventative #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Vaccines and Preventatives</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>