force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Animal__c.field-meta.xml
<CustomField>
    <fullName>Animal__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Animal</label>
    <referenceTo>Animal__c</referenceTo>
    <relationshipName>Vaccine_Administration</relationshipName>
    <type>Lookup</type>
</CustomField>