force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Calendar_Display_Start__c.field-meta.xml
<CustomField>
    <fullName>Calendar_Display_Start__c</fullName>
    <formula>if( Show_On_Calendar__c = True,  Due_On__c , null)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calendar Display Start</label>
    <type>Date</type>
</CustomField>