force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Date_Administered__c.field-meta.xml
<CustomField>
    <fullName>Date_Administered__c</fullName>
    <label>Date Administered</label>
    <type>Date</type>
</CustomField>