force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Due_On__c.field-meta.xml
<CustomField>
    <fullName>Due_On__c</fullName>
    <formula>IF( ISPICKVAL(Initial_Series_Booster__c,&quot;Initial&quot;),Date_Administered__c + Vaccine_Preventative__r.Initial_Days__c,IF( ISPICKVAL(Initial_Series_Booster__c,&quot;Booster&quot;),Date_Administered__c + Vaccine_Preventative__r.Booster_Days__c,IF( ISPICKVAL(Initial_Series_Booster__c,&quot;Series&quot;),Date_Administered__c + Vaccine_Preventative__r.Series_Days__c,null)))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Due On</label>
    <type>Date</type>
</CustomField>