force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Initial_Series_Booster__c.field-meta.xml
<CustomField>
    <fullName>Initial_Series_Booster__c</fullName>
    <label>Initial/Series/Booster</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Initial</fullName>
            </value>
            <value>
                <fullName>Booster</fullName>
            </value>
            <value>
                <fullName>Series</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>