force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Rabies_Tag__c.field-meta.xml
<CustomField>
    <fullName>Rabies_Tag__c</fullName>
    <label>Rabies Tag #</label>
    <length>100</length>
    <type>Text</type>
</CustomField>