force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Route__c.field-meta.xml
<CustomField>
    <fullName>Route__c</fullName>
    <label>Route</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>IM</fullName>
            </value>
            <value>
                <fullName>IN</fullName>
            </value>
            <value>
                <fullName>IV</fullName>
            </value>
            <value>
                <fullName>PO</fullName>
            </value>
            <value>
                <fullName>SQ</fullName>
            </value>
            <value>
                <fullName>Topical</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>