force-app/main/default/objects/Vaccine_and_Preventative__c/fields/Vaccine_Preventative__c.field-meta.xml
<CustomField>
    <fullName>Vaccine_Preventative__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Vaccine Preventative</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Medication_Drug__c.RecordTypeId</field>
            <operation>equals</operation>
            <value>Vaccine/Preventative</value>
        </filterItems>
        <filterItems>
            <field>Medication_Drug__c.Expired_Drug__c</field>
            <operation>equals</operation>
            <value>False</value>
        </filterItems>
        <filterItems>
            <field>Medication_Drug__c.Species__c</field>
            <operation>contains</operation>
            <valueField>$Source.Species__c</valueField>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Medication_Drug__c</referenceTo>
    <relationshipLabel>Vaccines and Preventatives</relationshipLabel>
    <relationshipName>Vaccine_Administration</relationshipName>
    <type>Lookup</type>
</CustomField>